[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.10.12"
dependencies = [
    "torch>=2.4.0",
    "jupyterlab>=4.0",
    "tiktoken>=0.5.1",
    "matplotlib>=3.7.1",
    "tensorflow>=2.15.0",
    "tqdm>=4.66.1",
    "numpy>=1.25,<2.0",
    "pandas>=2.2.1",
    "psutil>=5.9.5"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
